# Trajectree

./: pyproject.toml
Trajectree.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
examples/: CGLMP.ipynb  CGLMP_new.ipynb  CGLMP_vs_CHSH_trajectree.ipynb  CHSH.ipynb  HOM.ipynb  LRU_testing.ipynb  PCS.ipynb  amortized_sample_complexity.npy  amortized_sample_complexity_10.npy  amortized_sample_complexity_100.npy  amortized_sample_complexity_1000.npy  amortized_sample_complexity_20.npy  amortized_sample_complexity_30.npy  amortized_sample_complexity_50.npy  amortized_sample_complexity_500.npy  amortized_time_complexity.ipynb  amortized_time_complexity_script.py  benchmark.ipynb  benchmark_data_collection.ipynb  benchmark_trajectories_analysis_vqe_su2.json  benchmark_trajectories_analysis_wstate.json  cache_analysis.npy  cache_study.ipynb  distribution.ipynb  swap.ipynb  swapping  visibilities.npy
tests/: (Failing)swap_density_matrix_recreation.ipynb  CHSH_Qiskit.ipynb  LRU_testing copy.ipynb  amortized_sample_complexity_test.ipynb  density_matrix_recreation.ipynb  distribution.ipynb  distribution_statevector_test.ipynb  general_mixed_bs_noise.ipynb  light_source.ipynb  post_BSM_state.ipynb  test_amplitude_damping.ipynb  test_bell_state_measurement.ipynb  test_distribution.ipynb  test_light_source.ipynb  test_quant_info.ipynb  test_rotate_and_measure.ipynb  test_trajectree_caching.ipynb  trajectree_graph  weight_update_testing.ipynb
trajectree/: fock_optics.py  optical_quant_info.py  trajectory.py
trajectree.egg-info/: PKG-INFO  SOURCES.txt
trajectree/sequence/: swap.py
(+27 files in other folders)
